--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -61,6 +61,12 @@
         "no-case-declarations": "error",
         "no-const-assign": "error",
         "no-constant-condition": "off",
+        "no-multiple-empty-lines": [
+            "error",
+            {
+                "max": 2
+            }
+        ],
         "no-global-assign": "error",
         "no-new": "error",
         "no-param-reassign": "off",
@@ -210,6 +216,10 @@
                 "before": false,
                 "after": true
             }
+        ],
+        "space-before-blocks": [
+            "error",
+            "always"
         ],
         "space-before-function-paren": [
             "error",
