--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "devDependencies": {
         "@playwright/test": "^1.39.0",
         "@stylistic/eslint-plugin-ts": "^1.5.0",
+        "@stylistic/stylelint-plugin": "^2.0.0",
         "@types/assert": "^1.5.10",
         "@types/browserify": "^12.0.40",
         "@types/chrome": "^0.0.254",
@@ -74,9 +75,8 @@
         "jsdom": "^23.0.1",
         "jszip": "^3.10.1",
         "license-report": "^6.5.0",
-        "stylelint": "^15.11.0",
-        "stylelint-config-recommended": "^13.0.0",
-        "stylelint-stylistic": "^0.4.3",
+        "stylelint": "^16.0.2",
+        "stylelint-config-recommended": "^14.0.0",
         "ts-json-schema-generator": "^1.5.0",
         "typescript": "5.3.3",
         "vitest": "^0.34.6"
