--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -384,8 +384,7 @@
         ],
         "@typescript-eslint/no-this-alias": "error",
         "@typescript-eslint/no-unused-vars": "off",
-        "@typescript-eslint/no-var-requires": "off",
-        "@typescript-eslint/switch-exhaustiveness-check": "error"
+        "@typescript-eslint/no-var-requires": "off"
     },
     "overrides": [
         {
