Add engines to package.json (#442)
* Add engines to package.json

* Fix spacing

* Replace node version file

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "directories": {
         "test": "test"
     },
+    "engines": {
+        "node": ">=20.0.0"
+    },
     "type": "module",
     "scripts": {
         "build": "node ./dev/bin/build.js",
